--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
 <!-- write your code here -->
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+
+<head>
+  <meta charset="utf-8">
+  <title>Zainu Firdaus Imansyah</title>
+  <link rel="stylesheet" href="./style.css">
+  <link rel="icon" href="favicon.ico">
+
+<body>
+
+  <div class="satu">
+    <h2>Zainu Firdaus Imansyah</h2>
+    <p><strong>Web Developer</strong></p>
+    
+<hr size="4" noshade >
+  </div>
+    <hr size="4" noshade >
+  <div class="dua">
+        <div class="profile">
+      <img class="saya"src="Images\aku.jpeg" alt="">
+      <h2>Hello.</h2>
+      <p><strong>I'm Zainu Firdaus Imansyah can be called Zain, I'm a from <strong><a href="https://www.upi.edu/"> Indonesia University Of education</a></strong> majoring in <strong><a href="http://saig.upi.edu/">
+              Geographic Information Science</a></strong>.<br>but i am interested in programming especially web developing</strong></p>
+    </div>
+    <hr size="4" noshade >
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="html">
+        <h3 class="html0">HTML</h3>
+        <img class="html1" src="Images\html (1).png" alt="">
+        <p class="html2"><strong>HTML is the standard programming language used to create web pages, which are accessed via the internet. Abbreviation for
+            "Hypertext Markup Language" or "markup language"</strong></p>
+
+
+      </div>
+      <div class="css">
+
+        <h3 class="css0">CSS</h3>
+        <img class="css1" src="Images\css.png" alt="">
+        <p class="css2"><strong>CSS is a Cascading Style Sheet language and is usually used to set the appearance of elements written in a markup language,
+            such as HTML. CSS serves to separate content from its visual appearance on the site.</strong></p>
+      </div>
+
+      <div class="java script">
+
+        <h3 class="javascript0">Java Script</h3>
+        <img class="javascript1" src="Images\javascript.png" alt="">
+        <p class="javascript2"><strong>javaScript is a programming language used in website development to make it more dynamic and interactive. If previously
+            you only knew HTML and CSS, now you know that JavaScript can increase the functionality
+            of web pages. Even with this JavaScript you can create applications, tools, or even games on the web.</strong></p>
+      </div>
+    </div>
+    </div>
+    <hr size="4" noshade>
+    <div class="kontak">
+
+   <h3>Contact</h3>
+    <a class="btn1" href="https://wa.me/085726261225">Whatsapp</a>
+    <a class="btn2" href="https://www.instagram.com/zzzainf/">Instagram</a>
+    <a class="btn3" href="mailto:zazain031@gmail.com">Gmail</a>
+    </div>
+
+
+</html>
